--- a/api_sign_vc/package.json
+++ b/api_sign_vc/package.json
@@ -15,12 +15,23 @@
     "@digitalbazaar/bls12-381-multikey": "^1.1.1",
     "@digitalbazaar/data-integrity": "^2.1.0",
     "@digitalbazaar/vc": "^6.2.0",
+    "@mattrglobal/bbs-signatures": "^1.3.1",
+    "axios": "^1.6.7",
+    "bbs-signatures": "^1.0.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "crypto-ld": "^7.0.0",
     "did-jwt": "^8.0.0",
+    "did-jwt-vc": "^4.0.1",
+    "did-resolver": "^4.1.0",
+    "elliptic": "^6.5.5",
     "ethr-did-resolver": "^10.1.5",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
+    "jsonld": "^8.3.2",
+    "jsonld-signatures": "^11.2.1",
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^3.3.2",
+    "web-did-resolver": "^2.0.27",
     "web3": "^4.5.0"
   }
 }
