--- a/api_sign_vc/package.json
+++ b/api_sign_vc/package.json
@@ -27,6 +27,7 @@
     "elliptic": "^6.5.5",
     "ethr-did-resolver": "^10.1.5",
     "express": "^4.19.2",
+    "indy-sdk": "^1.16.0-dev-1655",
     "jsonld": "^8.3.2",
     "jsonld-signatures": "^11.2.1",
     "jsonwebtoken": "^9.0.2",
