--- a/api_sign_vc/package.json
+++ b/api_sign_vc/package.json
@@ -11,11 +11,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aries-framework/indy-vdr": "^0.4.2",
     "@digitalbazaar/bbs-2023-cryptosuite": "^1.1.1",
     "@digitalbazaar/bls12-381-multikey": "^1.1.1",
     "@digitalbazaar/data-integrity": "^2.1.0",
+    "@digitalbazaar/ed25519-signature-2020": "^5.2.0",
+    "@digitalbazaar/ed25519-verification-key-2020": "^4.1.0",
     "@digitalbazaar/vc": "^6.2.0",
+    "@hyperledger/anoncreds-nodejs": "^0.2.2",
+    "@hyperledger/aries-askar-nodejs": "^0.2.1",
     "@mattrglobal/bbs-signatures": "^1.3.1",
+    "@transmute/ed25519-key-pair": "^0.7.0-unstable.82",
     "axios": "^1.6.7",
     "bbs-signatures": "^1.0.0",
     "body-parser": "^1.20.2",
@@ -24,10 +30,10 @@
     "did-jwt": "^8.0.0",
     "did-jwt-vc": "^4.0.1",
     "did-resolver": "^4.1.0",
+    "ed25519": "^0.0.5",
     "elliptic": "^6.5.5",
     "ethr-did-resolver": "^10.1.5",
     "express": "^4.19.2",
-    "indy-sdk": "^1.16.0-dev-1655",
     "jsonld": "^8.3.2",
     "jsonld-signatures": "^11.2.1",
     "jsonwebtoken": "^9.0.2",
